# SmartRm

./: CLAUDE.md  Cargo.toml  PRD.md  README.md  install.sh
docs/: ARCHITECTURE.md  COMMANDS.md
src/: cli.rs  error.rs  id.rs  lib.rs  main.rs
src/commands/: cleanup.rs  config.rs  delete.rs  explain.rs  history.rs  list.rs  mod.rs  purge.rs  restore.rs  search.rs  stats.rs  timeline.rs  undo.rs
src/db/: mod.rs  operations.rs  queries.rs  schema.rs
src/fs/: archive.rs  disk_space.rs  hashing.rs  metadata.rs  mod.rs  restore.rs
src/gate/: agent_detection.rs  audit.rs  auth.rs  cooldown.rs  mod.rs  scope_preview.rs  tests.rs  tty.rs
src/models/: archive_object.rs  batch.rs  batch_item.rs  mod.rs  policy.rs  restore_event.rs
src/operations/: cleanup.rs  delete.rs  mod.rs  purge.rs  restore.rs
src/output/: human.rs  mod.rs
src/policy/: classifier.rs  config.rs  mod.rs  resolver.rs
tests/: db_error_tests.rs  e2e_cli.rs  lifecycle_scenarios.rs  user_journeys.rs
